# bn-monitor-v2

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
docs/: README.md  alert-engine.md  alert-rules.md  alert-signals.md  application-service.md  binance-parser.md  breakout-watch.md  configuration.md  database.md  discord-delivery.md  indicators.md  live-smoke-test.md  reports.md  repository.md  runtime-delivery-and-closed-kline-fixes.md
monitor/: __init__.py  app.py  cli.py  config.py  db.py  discord.py  indicators.py  models.py  reports.py  repository.py
plans/: 001-done-basic-constraints.md  002-done-altcoin-mvp-alert-signals.md  003-done-project-scaffold-config.md  004-done-initial-database-schema.md  005-done-core-repository-upserts.md  006-done-binance-parser.md  007-done-daily-flat-oi-rule.md  008-done-minimal-alert-engine.md  009-done-alert-application-service.md  010-done-alert-projection-summary.md  011-done-live-smoke-test.md  012-done-flat-oi-buildup-15m-rule.md  013-done-breakout-watch-rule.md  014-done-breakdown-watch-rule.md  015-done-refactor-decouple-rules-indicators.md  016-done-rule-thresholds-json.md  017-done-rule-thresholds-by-alert-type.md  018-done-alert-rules-full-review.md  019-done-continuous-monitor-container.md  020-done-daily-flat-oi-cooldown-utc-day.md  021-done-daily-flat-oi-calendar-cooldown.md  022-done-watch-threshold-relaxation.md  023-draft-long-pullback-reclaim-watch.md  024-done-runtime-delivery-and-closed-kline-fixes.md  README.md
(+24 files in other folders)
