[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bn-monitor-v2"
version = "0.1.0"
description = "Binance USD-M Futures altcoin anomaly monitor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "psycopg[binary]>=3.1,<4",
  "SQLAlchemy>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[project.scripts]
bn-monitor = "monitor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
